// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Component Tests Matches Mounted SnapShot 1`] = `
<MasonryTest>
  <GridColumn
    className="nw-block nw-block-white"
  >
    <div
      className="nwc-grid-col nw-block nw-block-white"
    >
      <h1>
        Masonry
      </h1>
      <GridRow
        className=""
      >
        <div
          className="nwc-grid-row "
        >
          <Masonry
            className=""
            columnCount={
              Object {
                "lg": 2,
                "md": 3,
                "sm": 4,
                "xs": 12,
              }
            }
            data={
              Array [
                Object {
                  "content": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book",
                  "image": "https://i.pinimg.com/236x/a7/0f/a2/a70fa29cbdd07046f782ba7ac952a2af--charlotte-north-carolina-charlotte-nc.jpg",
                  "index": 1,
                },
                Object {
                  "content": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book",
                  "image": "https://img1.picmix.com/output/pic/normal/9/7/6/6/3696679_c7168.gif",
                  "index": 2,
                },
                Object {
                  "content": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book",
                  "image": "https://images.pexels.com/photos/459225/pexels-photo-459225.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940",
                  "index": 3,
                },
                Object {
                  "content": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book",
                  "image": "https://images.fineartamerica.com/images/artworkimages/mediumlarge/1/beautiful-scenery-3-arun-sivaprasad.jpg",
                  "index": 4,
                },
              ]
            }
            renderList={[Function]}
          >
            <GridColumn
              className="nwc-grid-col-xs-3 "
              key="0"
            >
              <div
                className="nwc-grid-col nwc-grid-col-xs-3 "
              >
                <div
                  key="1"
                >
                  <div>
                    1
                  </div>
                  <Img
                    alt="NNNOW"
                    className=""
                    onError={[Function]}
                    onLoad={[Function]}
                    src="https://i.pinimg.com/236x/a7/0f/a2/a70fa29cbdd07046f782ba7ac952a2af--charlotte-north-carolina-charlotte-nc.jpg"
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <img
                      alt="NNNOW"
                      className="nwc-img "
                      onError={[Function]}
                      onLoad={[Function]}
                      src="https://i.pinimg.com/236x/a7/0f/a2/a70fa29cbdd07046f782ba7ac952a2af--charlotte-north-carolina-charlotte-nc.jpg"
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    />
                  </Img>
                  <div>
                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
                  </div>
                  <br />
                </div>
              </div>
            </GridColumn>
            <GridColumn
              className="nwc-grid-col-xs-3 "
              key="1"
            >
              <div
                className="nwc-grid-col nwc-grid-col-xs-3 "
              >
                <div
                  key="2"
                >
                  <div>
                    2
                  </div>
                  <Img
                    alt="NNNOW"
                    className=""
                    onError={[Function]}
                    onLoad={[Function]}
                    src="https://img1.picmix.com/output/pic/normal/9/7/6/6/3696679_c7168.gif"
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <img
                      alt="NNNOW"
                      className="nwc-img "
                      onError={[Function]}
                      onLoad={[Function]}
                      src="https://img1.picmix.com/output/pic/normal/9/7/6/6/3696679_c7168.gif"
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    />
                  </Img>
                  <div>
                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
                  </div>
                  <br />
                </div>
              </div>
            </GridColumn>
            <GridColumn
              className="nwc-grid-col-xs-3 "
              key="2"
            >
              <div
                className="nwc-grid-col nwc-grid-col-xs-3 "
              >
                <div
                  key="3"
                >
                  <div>
                    3
                  </div>
                  <Img
                    alt="NNNOW"
                    className=""
                    onError={[Function]}
                    onLoad={[Function]}
                    src="https://images.pexels.com/photos/459225/pexels-photo-459225.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <img
                      alt="NNNOW"
                      className="nwc-img "
                      onError={[Function]}
                      onLoad={[Function]}
                      src="https://images.pexels.com/photos/459225/pexels-photo-459225.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    />
                  </Img>
                  <div>
                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
                  </div>
                  <br />
                </div>
              </div>
            </GridColumn>
            <GridColumn
              className="nwc-grid-col-xs-3 "
              key="3"
            >
              <div
                className="nwc-grid-col nwc-grid-col-xs-3 "
              >
                <div
                  key="4"
                >
                  <div>
                    4
                  </div>
                  <Img
                    alt="NNNOW"
                    className=""
                    onError={[Function]}
                    onLoad={[Function]}
                    src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/1/beautiful-scenery-3-arun-sivaprasad.jpg"
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <img
                      alt="NNNOW"
                      className="nwc-img "
                      onError={[Function]}
                      onLoad={[Function]}
                      src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/1/beautiful-scenery-3-arun-sivaprasad.jpg"
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    />
                  </Img>
                  <div>
                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
                  </div>
                  <br />
                </div>
              </div>
            </GridColumn>
          </Masonry>
        </div>
      </GridRow>
    </div>
  </GridColumn>
</MasonryTest>
`;

exports[`Root Component Tests Matches Shallow SnapShot 1`] = `
<GridColumn
  className="nw-block nw-block-white"
>
  <h1>
    Masonry
  </h1>
  <GridRow
    className=""
  >
    <Masonry
      className=""
      columnCount={
        Object {
          "lg": 2,
          "md": 3,
          "sm": 4,
          "xs": 12,
        }
      }
      data={
        Array [
          Object {
            "content": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book",
            "image": "https://i.pinimg.com/236x/a7/0f/a2/a70fa29cbdd07046f782ba7ac952a2af--charlotte-north-carolina-charlotte-nc.jpg",
            "index": 1,
          },
          Object {
            "content": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book",
            "image": "https://img1.picmix.com/output/pic/normal/9/7/6/6/3696679_c7168.gif",
            "index": 2,
          },
          Object {
            "content": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book",
            "image": "https://images.pexels.com/photos/459225/pexels-photo-459225.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940",
            "index": 3,
          },
          Object {
            "content": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book",
            "image": "https://images.fineartamerica.com/images/artworkimages/mediumlarge/1/beautiful-scenery-3-arun-sivaprasad.jpg",
            "index": 4,
          },
        ]
      }
      renderList={[Function]}
    />
  </GridRow>
</GridColumn>
`;
